# memory-engine

./: .gitignore  README.md  pyproject.toml  terminalchat.py
examples/: cli_chat.py
memory_engine/: __init__.py  builder.py  engine.py  models.py  observer.py  retriever.py  store.py
memory_engine/embeddings/: base.py  openai.py
memory_engine/llm/: anthropic.py  base.py  openai.py
tasks/: todo.md
tests/: test_memory_engine.py
