[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-engine"
version = "0.1.0"
description = "Persistent memory engine for AI systems"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
